# rusty-grader

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  setup.sh
.cargo/: config.toml
.github/workflows/: build.yaml  rust.yml
example/etc/: a_plus_b.go  a_plus_b.java  a_plus_b.rs  a_plus_b_MLE.cpp  a_plus_b_MLE.py  a_plus_b_MLE.rs  a_plus_b_RE.py  a_plus_b_RE.rs  a_plus_b_SG.cpp  a_plus_b_SG.rs  a_plus_b_TLE.py  a_plus_b_TLE.rs  a_plus_b_h.cpp  log_mle.txt  log_ok.txt  log_re.txt  log_sg.txt  log_to.txt
example/scripts/: config.yaml
example/scripts/compile_scripts/: c  cpp  go  java  python  rust
example/scripts/grouper_scripts/: avg  min
example/scripts/runner_scripts/: c  java  python
example/tasks/0000/: manifest.yaml
example/tasks/a_plus_b/: manifest.yaml
example/tasks/a_plus_b/testcases/: 1.in  3.in  5.in
example/tasks/a_plus_b_h/: manifest.yaml
example/tasks/a_plus_b_h/compile_files/: code_0.h  grader.cpp
grader/: Cargo.toml
grader/src/: errors.rs  lib.rs  macros.rs  utils.rs
grader/src/instance/: error.rs  mod.rs  tests.rs
grader/src/submission/: manifest.rs  mod.rs  result.rs  tests.rs
grader/tests/instance/: a_plus_b.cpp  a_plus_b_RE.cpp  log_sg.txt  log_to.txt  log_xx.txt
interface/: Cargo.toml
interface/src/: cfg.rs  connection.rs  constants.rs  error.rs  main.rs  rmq.rs  runner.rs  utils.rs
src/: main.rs
src/instance/: error.rs  mod.rs  model.rs  tests.rs
tests/instance/: a_plus_b_TLE.cpp  compile_cpp  log_ok.txt  run_cpp
