[package]
name = "grader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
yaml-rust = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.25"
tokio = { version = "1.24.2", features = ["fs", "process"] }
log = "0.4.17"
anyhow = "1.0.71"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["fs", "process", "macros", "rt-multi-thread"] }
