[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7.6", features = ["with-serde_json-1"]}
grader = { path = "../grader" }
postgres-openssl = "0.5.0"
openssl = "0.10.41"
serde_json = "1.0.82"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
realtime-rs = { git = "https://github.com/programming-in-th/realtime-rs" }
brotli = "3.3.4"
